# calibration

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Makefile  README.md  README.md.backup  STATIC_ANALYSIS_REPORT.md  codecov.yml  generate_docs.sh  lint_report_final2.txt  serve_docs.py  setup_dev.sh  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  static-analysis.yml
app/: CMakeLists.txt  config.h  main.cpp
apps/cli/: CMakeLists.txt  config.h  main.cpp
apps/examples/: CMakeLists.txt  bundle_pipeline.cpp  bundle_pipeline_input.json  calibration_pipeline.cpp  homography.cpp  homography_input.json  intrinsic_extrinsic_input.json  intrinsic_extrinsic_multicam_input.json  intrinsic_extrinsic_pipeline.cpp  linescan_calibration.cpp  linescan_input.json  main.cpp  planar_features_schema.json  planar_intrinsics.cpp  planar_intrinsics_config.json
cmake/: Dependencies.cmake  Warnings.cmake  calibConfig.cmake.in
doc/: ax_xb_residual.md  calib.md  camera.md  dataset_schemas.md  distortion.md  doxygen_setup.md  extrinsics.md  handeye.md  homography.md  intrinsics.md  mainpage.dox  pipeline_input.md  planarpose.md  schempflug.md  tsai_lenz_handeye.md
examples/: CMakeLists.txt  charuco_features_schema.json  charuco_intrinsics.cpp  charuco_intrinsics_config.json  handeye_example.cpp  main.cpp  planar_features_schema.json  planar_intrinsics.cpp  planar_intrinsics_config.json
include/calib/: bundle.h  calib.h  camera.h  cameramatrix.h  cameramodel.h  charuco_intrinsics_utils.h  distortion.h  extrinsics.h  handeye.h  homography.h  intrinsics.h  intrinsicsinit.h  jointintrextr.h  json.h  linescan.h  optimize.h  pinhole.h  planar_intrinsics_utils.h  planarpose.h  posefromhomography.h  ransac.h  scheimpflug.h  serialization.h
include/calib/config/: planar_intrinsics.h
include/calib/core/: cameramatrix.h
include/calib/datasets/: planar.h
include/calib/detail/: intrinsics_utils.h
include/calib/estimation/: bundle.h  extrinsics.h  handeye.h  homography.h  intrinsics.h  linescan.h  optimize.h  planarpose.h  posefromhomography.h  ransac.h
include/calib/io/: json.h  serialization.h  stream_capture.h
include/calib/model/: any_camera.h
include/calib/models/: camera_matrix.h  cameramodel.h  distortion.h  pinhole.h  (+1 more)
include/calibration/: bundle.h  calib.h  camera.h  cameramatrix.h  distortion.h  extrinsics.h  handeye.h  homography.h  intrinsics.h  jointintrextr.h  json.h  linescan.h  planarpose.h  posefromhomography.h  scheimpflug.h  serialization.h
py/: apis.py  processimages.py
schemas/: calib_dataset.schema.json
src/: CMakeLists.txt  bundle.cpp  bundleresidual.h  calib.cpp  ceresutils.h  charuco_intrinsics_utils.cpp  distortion.cpp  extrinsics.cpp  extrinsicsdlt.cpp  handeye.cpp  handeyedlt.cpp  handeyeresidual.h  homography.cpp  homographyestimator.cpp  homographyestimator.h  intrinsics.cpp  intrinsicsdlt.cpp  intrinsicsemidltresidual.h  intrinsicsinit.cpp  intrinsicssemidlt.cpp  jointintrextr.cpp  linescan.cpp  observationutils.h  planar_intrinsics_utils.cpp  planarpose.cpp  planeestimator.cpp  planeestimator.h  posefromhomography.cpp  zhang.cpp  zhang.h
src/core/: CMakeLists.txt
src/datasets/: CMakeLists.txt  planar.cpp
src/estimation/: CMakeLists.txt  bundle.cpp  handeye.cpp  handeyedlt.cpp  homography.cpp  intrinsicsdlt.cpp  planarpose.cpp  posefromhomography.cpp
src/estimation/common/: CMakeLists.txt  intrinsics_utils.h  se3_utils.h
src/estimation/detail/: ceresutils.h  homographyestimator.h  observationutils.h  zhang.h
src/estimation/linear/: CMakeLists.txt  extrinsicsdlt.cpp  handeyedlt.cpp  homographyestimator.cpp  intrinsicsdlt.cpp  linescan.cpp  planarpose_linear.cpp  planefit.cpp  posefromhomography.cpp  zhang.cpp
src/estimation/optim/: CMakeLists.txt  bundle.cpp  extrinsics.cpp  handeye.cpp  homography.cpp  intrinsics.cpp  intrinsicssemidlt.cpp  linescan.cpp  planarpose.cpp
src/estimation/residuals/: bundleresidual.h  extrinsicsresidual.h  handeyeresidual.h  intrinsicresidual.h  intrinsicsemidltresidual.h
src/io/: CMakeLists.txt
src/models/: CMakeLists.txt
src/pipeline/: CMakeLists.txt  extrinsics.cpp  handeye.cpp  linescan.cpp  loaders.cpp  pipeline.cpp  planar_intrinsics.cpp  stages.cpp
src/pipeline/detail/: bundle_utils.cpp
src/pipeline/facades/: extrinsics.cpp  intrinsics.cpp
src/pipeline/reports/: intrinsics.cpp
src/pipeline/stages/: bundle_stage.cpp  handeye_stage.cpp  intrinsic_stage.cpp  stereo_stage.cpp
src/pipeline/stages/detail/: bundle_utils.cpp  bundle_utils.h  planar_utils.cpp  planar_utils.h
src/reports/: CMakeLists.txt  intrinsics.cpp  planar_intrinsics.cpp  planar_intrinsics_types.cpp
src/residuals/: bundleresidual.h  extrinsicresidual.h  extrinsicsresidual.h  handeyeresidual.h  intrinsicresidual.h  intrinsicsemidltresidual.h  jointextrintrresidual.h
src/utils/: CMakeLists.txt  planar_intrinsics_utils.cpp
test/: CMakeLists.txt  bundle_test.cpp  calib_test.cpp  charuco_intrinsics_test.cpp  distortion_test.cpp  extrinsics_test.cpp  handeye_test.cpp  handeyedata.h  homography_test.cpp  intrinsics_estimate_test.cpp  intrinsics_optimize_test.cpp  intrinsics_test.cpp  joint_test.cpp  json_test.cpp  linescan_test.cpp  optimize_bundle_test.cpp  planar_intrinsics_test.cpp  planarpose_test.cpp  posefromhomography_test.cpp  scheimpflug_bundle_test.cpp  scheimpflug_handeye_bundle_test.cpp  scheimpflug_test.cpp  stream_capture_test.cpp  utils.h
tests/unit/: CMakeLists.txt  bundle_stage_utils_test.cpp  bundle_test.cpp  dataset_loader_test.cpp  distortion_test.cpp  extrinsics_test.cpp  handeye_test.cpp  homography_test.cpp  intrinsics_estimate_test.cpp  intrinsics_optimize_test.cpp  json_test.cpp  linescan_facade_test.cpp  linescan_test.cpp  linescan_utils_test.cpp  pipeline_stages_test.cpp  pipeline_test.cpp  planar_intrinsics_test.cpp  planarpose_test.cpp  planefit_test.cpp  posefromhomography_test.cpp  scheimpflug_bundle_test.cpp  scheimpflug_test.cpp  se3_utils_test.cpp  stereo_calibration_test.cpp  stream_capture_test.cpp  utils.h
(+40 files in other folders)
